--- a/FIREMNÉ VEČIERKY/Katering-firemné.html
+++ b/FIREMNÉ VEČIERKY/Katering-firemné.html
@@ -13,7 +13,7 @@
         .bgimg {
             background-position: center;
             background-size: cover;
-            background-image: url("img/index/img4.jpg");
+            background-image: url("img/index-firemné/img3.jpg");
             min-height: 75%;
         }
 
@@ -30,7 +30,7 @@
 <div class="top">
     <div class="row padding black">
         <div class="col-top m3-top ">
-            <img src="img/logo/logo1.png" class="block button" style="width: 79px!important;">
+            <img src="../logo/logo1.png" class="block button" style="width: 79px!important;">
         </div>
         <div class="col m3 ">
             <a href="#" class="button block black">STUŽKOVÉ</a>
@@ -70,17 +70,15 @@
             <a href="../../Documents/GitHub/webov-technologie-skupina-1/FIREMNÉ%20VEČIERKY/index.html" class="button block black">ABOUT</a>
         </div>
         <div class="col m3">
-            <a href="#" class="button block black">KATERING</a>
+            <a href="Katering-firemné.html" class="button block black">KATERING</a>
         </div>
         <div class="col m3">
-            <a href="Projekty.html" class="button block black">PROJEKTY</a>
+            <a href="projekty-firemné.html" class="button block black">PROJEKTY</a>
         </div>
         <div class="col m3">
-            <a href="služby%20.html" class="button block black">SLUZBY</a>
+            <a href="služby-firemné.html" class="button block black">SLUZBY</a>
         </div>
-        <div class="col m3">
-            <a href="#" class="button block black">FORMULÁR</a>
-        </div>
+
     </div>
 </div>
 
