--- a/FIREMNÉ VEČIERKY/služby-firemné.html
+++ b/FIREMNÉ VEČIERKY/služby-firemné.html
@@ -13,7 +13,7 @@
         .bgimg {
             background-position: center;
             background-size: cover;
-            background-image: url("img/index/img2.jpg");
+            background-image: url("img/index-firemné/img1.jpg");
             min-height: 75%;
         }
 
@@ -30,7 +30,7 @@
 <div class="top">
     <div class="row padding black">
         <div class="col-top m3-top ">
-            <img src="img/logo/logo1.png" class="block button" style="width: 79px!important;" alt="">
+            <img src="../logo/logo1.png" class="block button" style="width: 79px!important;" alt="">
         </div>
         <div class="col m3 ">
             <a href="../STUŽKOVÁ/hlavna-stuzkove.html" class="button block black">STUŽKOVÉ</a>
@@ -71,16 +71,13 @@
             <a href="../../Documents/GitHub/webov-technologie-skupina-1/FIREMNÉ%20VEČIERKY/index.html" class="button block black">ABOUT</a>
         </div>
         <div class="col m3">
-            <a href="katering.html" class="button block black">KATERING</a>
+            <a href="Katering-firemné.html" class="button block black">KATERING</a>
         </div>
         <div class="col m3">
-            <a href="Projekty.html" class="button block black">PROJEKTY</a>
+            <a href="projekty-firemné.html" class="button block black">PROJEKTY</a>
         </div>
         <div class="col m3">
-            <a href="#" class="button block black">SLUZBY</a>
-        </div>
-        <div class="col m3">
-            <a href="#" class="button block black">FORMULÁR</a>
+            <a href="služby-firemné.html" class="button block black">SLUZBY</a>
         </div>
     </div>
 
@@ -369,388 +366,7 @@
         </div>
 
     </div>
-    <!DOCTYPE html>
-    <html lang=""><head>
-        <title>SLUŽBY</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/style.css">
-        <style>
-            body, html {
-                height: 100%;
-                font-family: "Inconsolata", sans-serif;
-            }
 
-            .bgimg {
-                background-position: center;
-                background-size: cover;
-                background-image: url("img/index/img2.jpg");
-                min-height: 75%;
-            }
-
-            .menu {
-                display: none;
-            }
-
-
-        </style>
-    </head>
-    <body>
-
-    <!-- Links (sit on top) -->
-    <div class="top">
-        <div class="row padding black">
-            <div class="col-top m3-top ">
-                <img src="img/logo/logo1.png" class="block button" style="width: 79px!important;" alt="">
-            </div>
-            <div class="col m3 ">
-                <a href="#" class="button block black">STUŽKOVÉ</a>
-            </div>
-            <div class="col m3">
-                <a href="#" class="button block black">SVADBA</a>
-            </div>
-            <div class="col m3">
-                <a href="#" class="button block black">FIREMNÉ VEČIERKY</a>
-            </div>
-            <div class="col m3">
-                <a href="#" class="button block black">OSLAVY</a>
-            </div>
-            <div class="col m3">
-                <a href="#" class="button block black">ROZLÚČKY</a>
-            </div>
-        </div>
-    </div>
-
-    <!-- Header with image -->
-    <header class="bgimg display-container grayscale-min" id="home">
-        <div class="display-bottomleft center padding-large hide-small">
-            <span class="tag">Open from 6am to 5pm</span>
-        </div>
-        <div class="display-middle center">
-            <span class="text-white" style="font-size:90px">Služby</span>
-        </div>
-        <div class="display-bottomright center padding-large">
-            <span class="text-white">15 Adr street, 5015</span>
-        </div>
-    </header>
-
-    <!-- Add a background color and large text to the whole page -->
-
-    <div class="top">
-        <div class="row padding black">
-            <div class="col m3 ">
-                <a href="../../Documents/GitHub/webov-technologie-skupina-1/FIREMNÉ%20VEČIERKY/index.html" class="button block black">ABOUT</a>
-            </div>
-            <div class="col m3">
-                <a href="katering.html" class="button block black">KATERING</a>
-            </div>
-            <div class="col m3">
-                <a href="Projekty.html" class="button block black">PROJEKTY</a>
-            </div>
-            <div class="col m3">
-                <a href="#" class="button block black">SLUZBY</a>
-            </div>
-            <div class="col m3">
-                <a href="#" class="button block black">FORMULÁR</a>
-            </div>
-        </div>
-
-        <!-- About Container -->
-
-
-        <div class="container" id="about">
-            <div class="sand grayscale large">
-                <div class="content" style="max-width:700px">
-                    <h5 class="center padding-32"><span class="tag wide">ČO VÁM PONÚKAME </span></h5>
-                    <p>
-                        Ste pripravení na to, aby vaše udalosti zaznamenali štýlom a eleganciou?
-                        Tak toto je miesto pre vás! S naším oddaným tímom profesionálov,
-                        ktorí majú oko pre detaily a srdce pre kreativitu, sme pripravení zabezpečiť,
-                        že vaša udalosť bude jedinečná a nezabudnuteľná.
-                    </p>
-                    <p>
-                        Sme tu, aby sme vám pomohli vytvoriť jedinečnú udalosť,
-                        ktorá bude rezonovať vo vašich spomienkach na dlhé roky.
-                        Kontaktujte nás ešte dnes a dajte nám príležitosť zabezpečiť,
-                        že vaša udalosť bude nezabudnuteľná!
-                    </p>
-
-                </div>
-            </div>
-            <!-- služobné výbery  -->
-            <div class="border">
-                <div class="bar theme">
-                    <button class="bar-item button testbtn padding-16" onclick="openSluzba(event,'DJ')">DJ</button>
-                    <button class="bar-item button testbtn padding-16" onclick="openSluzba(event,'Cameraman')">CAMERAMAN</button>
-                    <button class="bar-item button testbtn padding-16" onclick="openSluzba(event,'Fotograf')">FOTOGRAF</button>
-                    <button class="bar-item button testbtn padding-16" onclick="openSluzba(event,'moderátor')">MODERÁTOR</button>
-                </div>
-
-                <div id="DJ" class="container city animate-opacity" style="display: none;">
-                    <h2>Ethan Frost</h2>
-
-                    <div class="quarter quarter-20">
-                        <img src="img/služby%20/dj.jpg" alt="Sandwich" style="width: 200px !important;">
-                    </div>
-
-                    <h3><b>
-                        KONTAKT
-                    </b></h3>
-                    <p><a href="#">ethanFrost@gmail.com</a></p>
-                    <p>
-                        0900 123 456
-                    </p>
-
-                    <p>Zaznamenávam váš zvukový svet v každom tichu.”</p>
-                    <p>Talent dodáva život každému vášmu projektu.
-                        Nabízam širokú škálu hudby v rôznych štýloch a žánroch, vrátane popu, rocku,
-                        elektronickej hudby, klasiky a mnohých ďalších. Môžete sa spoľahnúť,
-                        že vyberiem tú správnu hudbu, ktorá dokonale doplní váš projekt
-                        a podčiarkne jeho atmosféru.</p>
-                    <table>
-
-                        <thead>
-                        <tr>
-                            <h5
-                                    class="center padding-16">
-              <span
-                      class="tag wide">CENNÍK
-            </span>
-                            </h5>
-                        </tr>
-                        </thead>
-                        <br>
-                        <tbody>
-                        <tr>
-                            <td>Nahrávanie zvuku (na hodinu)</td>
-                            <td>50 EUR</td>
-                        </tr>
-                        <tr>
-                            <td>Mixovanie a mastering (za projekt)</td>
-                            <td>75 EUR</td>
-                        </tr>
-                        <tr>
-                            <td>Ozvučenie udoalosti</td>
-                            <td>200 EUR</td>
-                        </tr>
-                        <tr>
-                            <td>Zvukový design (za projekt)</td>
-                            <td>100 EUR</td>
-                        </tr>
-                        <tr>
-                            <td>Zvuková montáž (za projekt)</td>
-                            <td>150 EUR</td>
-                        </tr>
-                        <tr>
-                            <td>Zvuková technika (za deň)</td>
-                            <td>150 EUR</td>
-                        </tr>
-                        <tr>
-                            <td>Konzultácie</td>
-                            <td>40 EUR</td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
-
-                <div id="Cameraman" class="container city animate-opacity" style="display: none;">
-                    <h2>Isaac Brooks</h2>
-
-                    <div class="quarter-20 quarter">
-                        <img src="img/služby%20/Introducing%20the%20Cameraman%20Pant.jpg" alt="Sandwich" style="width: 200px !important;">
-                    </div>
-
-                    <h3><b>
-                        KONTAKT
-                    </b></h3>
-                    <p><a href="#"> isaacBrooks@gmail.com</a></p>
-                    <p>
-                        0900 123 123
-                    </p>
-
-                    <p>
-                        “Zachytávam vaše okamžiky v živých obrazech.”
-                    </p>
-                    <p>
-                        Dovoľte mi zachytiť vaše príbehy a udalosti s jemným okom pre detail a vášnivým
-                        umením pre vizuálnu estetiku. Spoločne vytvoríme obrazy, ktoré vyrozprávajú vaše
-                        príbehy so silou a krásou, ktorá oslní vašich divákov.</p>
-                    <table>
-
-                        <thead>
-                        <tr>
-                            <h5
-                                    class="center padding-16">
-              <span
-                      class="tag wide">CENNÍK
-            </span>
-                            </h5>
-                        </tr>
-                        </thead>
-                        <br>
-                        <tbody>
-                        <tr>
-                            <td>Natáčanie videa (za hodinu)</td>
-                            <td>50 EUR</td>
-                        </tr>
-                        <tr>
-                            <td>Komerčné natáčanie (za projekt)</td>
-                            <td>300 EUR</td>
-                        </tr>
-                        <tr>
-                            <td>Eventové video (za udalosť)</td>
-                            <td>200 EUR</td>
-                        </tr>
-                        <tr>
-                            <td>Dokumentárne natáčanie (za projekt)</td>
-                            <td>100 EUR</td>
-                        </tr>
-                        <tr>
-                            <td>Konzultácie a príprava (za hodinu)</td>
-                            <td>40 EUR</td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
-
-                <div id="Fotograf" class="container city animate-opacity" style="display: block;">
-                    <h2>Oliver Stone</h2>
-
-                    <div class="quarter-20 quarter">
-                        <img src="img/služby%20/Adam%20Franzino%20Photography%20Archives%20@%20AOC%20—%20Anne%20of%20Carversville.jpg" alt="Sandwich" style="width: 200px !important;">
-                    </div>
-
-                    <h3><b>
-                        KONTAKT
-                    </b></h3>
-
-                    <p><a href="#">oliverStone@gmail.com</a></p>
-
-                    <p>
-                        0900 123 567
-                    </p>
-
-                    <p>“Zachytávam vaše okamihy v nekonečných obrazoch.”</p>
-                    <p>
-                        Dovoľte mi zachytiť vaše vzácne momenty a premeniť ich na umenie, ktoré vyjadruje vašu jedinečnosť a
-                        krásu. Spoločne vytvoríme fotografie, ktoré budú trvať navždy a prinesú radosť a úžas každému,
-                        kto ich uvidí.</p>
-                    <table>
-
-                        <thead>
-                        <tr>
-                            <h5
-                                    class="center padding-16">
-              <span
-                      class="tag wide">CENNÍK
-            </span>
-                            </h5>
-                        </tr>
-                        </thead>
-                        <br>
-                        <tbody>
-                        <tr>
-                            <td>Portrét séria (za hodinu))</td>
-                            <td>50 EUR</td>
-                        </tr>
-                        <tr>
-                            <td>Fashion fotografia (za dve hodiny)</td>
-                            <td>75 EUR</td>
-                        </tr>
-                        <tr>
-                            <td>Kreatívna séria (za dve hodiny)</td>
-                            <td>200 EUR</td>
-                        </tr>
-                        <tr>
-                            <td>Retro fotografie (za hodinu)</td>
-                            <td>100 EUR</td>
-                        </tr>
-                        <tr>
-                            <td>Konzultácie a prírava štýlu (za hodinu)</td>
-                            <td>50 EUR</td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
-
-                <div id="moderátor" class="container city animate-opacity" style="display: block;">
-                    <h2>Maximilian Sky</h2>
-
-
-                    <div class="quarter quarter-20">
-                        <img src="img/služby%20/Tamada%20Kosten%20-%20auf%20Russisch%20für%20Ihre%20russische%20Hochzeit.jpg" alt="Sandwich" style="width: 200px !important;">
-                    </div>
-
-                    <h3><b>
-                        KONTAKT
-                    </b></h3>
-
-                    <p><a href="#"> MaximilianSky@gmail.com</a></p>
-
-                    <p>
-                        0900 123 678
-                    </p>
-
-                    <p>
-                        Od veľkých podujatí a konferencií po televízne programy a rozhlasové show - moja schopnosť komunikovať
-                        a angažovať publikum prináša živú energiu do každej situácie.
-
-                        Nabízam široké spektrum moderátorských štýlov a tém, vrátane formálnych podujatí,
-                        informačných relácií, diskusných panelov a mnohých ďalších. Môžete sa spoľahnúť, že každá prezentácia bude profesionálne vykonaná s úctou k požiadavkám publika.
-
-                        Dovoľte mi byť hlasom vašej udalosti a spolu vytvoríme atmosféru, ktorá bude inšpirovať,
-                        informovať a baviť. Nechajte ma priviesť vaše príbehy k životu a zanechať nezabudnuteľný
-                        dojem na všetkých prítomných.</p>
-                    <table>
-                        <thead>
-                        <tr>
-                            <h5
-                                    class="center padding-16">
-              <span
-                      class="tag wide">CENNÍK
-            </span>
-                            </h5>
-                        </tr>
-                        </thead>
-                        <br>
-                        <tbody>
-                        <tr>
-                            <td>Moderovanie verejných udalostí (za hodinu)</td>
-                            <td>38 EUR</td>
-                        </tr>
-                        <tr>
-                            <td>Moderovanie firemných udalostí a konferencií (za deň)</td>
-                            <td>300 EUR</td>
-                        </tr>
-                        <tr>
-                            <td>Moderovanie diskusných panelov (za hodinu)</td>
-                            <td>200 EUR</td>
-                        </tr>
-                        <tr>
-                            <td>Moderovanie online udalostí a webinarov (za hodinu)</td>
-                            <td>100 EUR</td>
-                        </tr>
-                        <tr>
-                            <td>Konzultácie a príprava moderovania (za hodinu)</td>
-                            <td>40 EUR</td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-
-        </div>
-
-
-
-        <!-- End page content -->
-
-    </div>
-
-    <!-- Footer -->
-    <footer class="center light-grey padding-48 large">
-        <p>Powered by <a href="#" target="_blank" class="hover-text-green">w3.css</a></p>
-    </footer>
 
     <script>
 
@@ -788,57 +404,6 @@
         }
         document.getElementById("myLink").click();
     </script>
-
-
     </body></html>
 
-
-
     <!-- End page content -->
-
-</div>
-
-<!-- Footer -->
-<footer class="center light-grey padding-48 large">
-    <p>Powered by <a href="#" target="_blank" class="hover-text-green">w3.css</a></p>
-</footer>
-
-<script>
-
-    // Tabs
-    function openSluzba(evt, cityName) {
-        let i;
-        const x = document.getElementsByClassName("city");
-        for (i = 0; i < x.length; i++) {
-            x[i].style.display = "none";
-        }
-        var activebtn = document.getElementsByClassName("testbtn");
-        for (i = 0; i < x.length; i++) {
-            activebtn[i].className = activebtn[i].className.replace(" dark-grey", "");
-        }
-        document.getElementById(cityName).style.display = "block";
-        evt.currentTarget.className += " dark-grey";
-    }
-
-    var mybtn = document.getElementsByClassName("testbtn")[0];
-    mybtn.click();
-
-    // Tabbed Menu
-    function openMenu(evt, menuName) {
-        var i, x, tablinks;
-        x = document.getElementsByClassName("menu");
-        for (i = 0; i < x.length; i++) {
-            x[i].style.display = "none";
-        }
-        tablinks = document.getElementsByClassName("tablink");
-        for (i = 0; i < x.length; i++) {
-            tablinks[i].className = tablinks[i].className.replace(" dark-grey", "");
-        }
-        document.getElementById(menuName).style.display = "block";
-        evt.currentTarget.firstElementChild.className += " dark-grey";
-    }
-    document.getElementById("myLink").click();
-</script>
-
-
-</body></html>
