--- a/FIREMNÉ VEČIERKY/hlavná-firemná.html
+++ b/FIREMNÉ VEČIERKY/hlavná-firemná.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html><head>
-    <title>katering-firemné</title>
+    <title>FIREMNÉ večierky</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
@@ -13,7 +13,7 @@
         .bgimg {
             background-position: center;
             background-size: cover;
-            background-image: url("img/index/img4.jpg");
+            background-image: url("img/index-firemné/img1.jpg");
             min-height: 75%;
         }
 
@@ -33,13 +33,13 @@
             <img src="img/logo/logo1.png" class="block button" style="width: 79px!important;">
         </div>
         <div class="col m3 ">
-            <a href="#" class="button block black">STUŽKOVÉ</a>
+            <a href="../STUŽKOVÁ/hlavna-stuzkove.html" class="button block black">STUŽKOVÉ</a>
         </div>
         <div class="col m3">
-            <a href="#" class="button block black">SVADBA</a>
+            <a href="../SVADBA/hlavna-svadba.html" class="button block black">SVADBA</a>
         </div>
         <div class="col m3">
-            <a href="#" class="button block black">FIREMNÉ VEČIERKY</a>
+            <a href="hlavná-firemná.html" class="button block black">FIREMNÉ VEČIERKY</a>
         </div>
         <div class="col m3">
             <a href="#" class="button block black">OSLAVY</a>
@@ -56,173 +56,104 @@
         <span class="tag">Open from 6am to 5pm</span>
     </div>
     <div class="display-middle center">
-        <span class="text-white" style="font-size:90px">Katering</span>
+        <span class="text-white" style="font-size:90px">Firemné<br>večierky</span>
     </div>
     <div class="display-bottomright center padding-large">
         <span class="text-white">15 Adr street, 5015</span>
     </div>
 </header>
 
-
-<div class="top">
-    <div class="row padding black">
-        <div class="col m3 ">
-            <a href="../../Documents/GitHub/webov-technologie-skupina-1/FIREMNÉ%20VEČIERKY/index.html" class="button block black">ABOUT</a>
-        </div>
-        <div class="col m3">
-            <a href="#" class="button block black">KATERING</a>
-        </div>
-        <div class="col m3">
-            <a href="Projekty.html" class="button block black">PROJEKTY</a>
-        </div>
-        <div class="col m3">
-            <a href="služby%20.html" class="button block black">SLUZBY</a>
-        </div>
-        <div class="col m3">
-            <a href="#" class="button block black">FORMULÁR</a>
-        </div>
-    </div>
-</div>
-
-
 <!-- Add a background color and large text to the whole page -->
 <div class="sand grayscale large">
 
-    <!-- About Container -->
-
-
-
-    <!-- !PAGE CONTENT! -->
-    <div class="main content padding" style="max-width:1200px;margin-top:100px">
-
-        <h5 class="center padding-32"><span class="tag wide">POLIEVKY</span></h5>
-
-        <!-- First Photo Grid POLIEVKY-->
-        <div class="row-padding padding-16 center">
-            <div class="quarter quarter-20">
-                <img src="img/katering/Brokolicová%20polévka….jpg" alt="Sandwich" style="width:100%">
-                <h3>Brokolicová Polievka</h3>
-                <p>Táto jednoduchá a chutná polievka je plná vitamínov a vlákniny,
-                    čo ju robí ideálnou voľbou pre výživný obed alebo večeru. </p>
+    <div class="top">
+        <div class="row padding black">
+            <div class="col m3 ">
+                <a href="#" class="button block black">ABOUT</a>
             </div>
-            <div class="quarter quarter-20">
-                <img src="img/katering/rajčinová%20polievka.jpg" alt="Steak" style="width:100%">
-                <h3>Rajčinová Polievka</h3>
-                <p>Táto jednoduchá polievka je plná bohatých chutí rajčiat a aromatických bylín,
-                    čo ju robí obľúbenou voľbou pre každú príležitosť.</p>
+            <div class="col m3">
+                <a href="katering.html" class="button block black">KATERING</a>
             </div>
-            <div class="quarter quarter-20">
-                <img src="img/katering/Mrkvová%20polévka%20se%20zázvorem%20a%20červenou%20čočkou%20-.jpg" alt="Cherries" style="width:100%">
-                <h3>Mrkvová polievka so zázvorom a červenou čočkou</h3>
-                <p> Táto unikátna kombinácia chutí ponúka osviežujúci zážitok, ktorý určite očarí vaše chuťové poháriky.</p>
+            <div class="col m3">
+                <a href="Projekty.html" class="button block black">PROJEKTY</a>
             </div>
-            <div class="quarter quarter-20">
-                <img src="img/katering/Bramborová%20polévka%20se%20slaninou.jpg" alt="Pasta and Wine" style="width:100%">
-                <h3>Zemiaková polievka so slaninou</h3>
-                <p>Zemiaková polievka so slaninou je skutočným lahôdkou pre všetkých milovníkov dobrého jedla. Je to jednoduchá,
-                    no nesmierne chutná jedlo, ktorá zahreje váš žalúdok a dušu. </p>
+            <div class="col m3">
+                <a href="služby%20.html" class="button block black">SLUZBY</a>
             </div>
-        </div>
-
-        <h5 class="center padding-32"><span class="tag wide">HLAVNÉ JEDLÁ</span></h5>
-
-        <!-- Second Photo Grid HLAVNÉ JEDLÁ-->
-        <div class="row-padding padding-16 center" >
-            <div class="quarter quarter-20">
-                <img src="img/katering/pečené%20mäso%20na%20šťave.jpg" alt="Sandwich" style="width:100%">
-                <h3>Pečené mäso na šťave</h3>
-                <p>Toto jedlo prináša dokonalú kombináciu šťavnatého mäsa
-                    a aromatických bylín, vďaka ktorým sa každý kúsky mäsa rozpúšťa v ústach. </p>
-            </div>
-            <div class="quarter quarter-20">
-                <img src="img/katering/Zemiaky%20hasselback%20o%20slaninou%20a%20syrom.jpg" alt="Steak" style="width:100%">
-                <h3>Zemiaky Hasselback so slaninou a syrom</h3>
-                <p>Zemiaky Hasselback sú elegantnou a chutnou alternatívou k bežným zemiakom, a
-                    keď ich ešte oživíte slaninou a syrom.</p>
-            </div>
-            <div class="quarter quarter-20">
-                <img src="img/katering/Lemon%20Garlic%20Butter%20Chicken%20and%20Green%20Beans%20Skillet.jpg" alt="Cherries" style="width:100%">
-                <h3>Pečené mäsové kúsky na hrášku</h3>
-                <p>Tento pokrm kombinuje šťavnaté kúsky mäsa s lahodným hráškom a aromatickými bylinkami,
-                    čo vytvára vyváženú a lahodnú chuťovú kombináciu. </p>
-            </div>
-            <div class="quarter quarter-20">
-                <img src="img/katering/The%20BEST%20Taco%20Pasta%20%5Bvideo%5D.jpg" alt="Pasta and Wine" style="width:100%">
-                <h3>Taco Pasta</h3>
-                <p>Všetky klasické chute tacos, ako je mleté mäso, koreniny a syr, a kombinuje ich s cestovinou, vytvárajúc tak
-                    vynikajúcu jedlá skúsenosť. </p>
-            </div>
-            <div class="quarter quarter-20">
-                <img src="img/katering/Six%20dumpling%20sauces.jpg" alt="Pasta and Wine" style="width:100%">
-                <h3>6ks Dumplings</h3>
-                <p>Dumplings sú univerzálnym jedlom, ktoré sa môže variť a prispôsobovať rôznym chutiam a kultúram.</p>
-            </div>
-        </div>
-
-        <h5 class="center padding-32"><span class="tag wide">DEZERTY</span></h5>
-
-        <!-- Third Photo Grid DEZERTY-->
-        <div class="row-padding padding-16 center">
-            <div class="quarter quarter-20">
-                <img src="img/katering/Delicious%20Strawberry%20Tiramisu%20Recipe,%20Easy%20to%20Make%20-%20CookingFantasies.jpg" alt="Sandwich" style="width:100%">
-                <h3>Jahodové Teramisu </h3>
-                <p>Vstúpte do sveta jahodového tiramisu, kde sa harmonicky spájajú sladká jemnosť jahôd, hladká
-                    krémovosť mascarpone a bohatá hĺbka kávového nápoja.</p>
-            </div>
-            <div class="quarter quarter-20">
-                <img src="img/katering/Layered%20Chocolate%20Cheesecake%20with%20Oreo%20Crust%20–%20No%20Bake.jpg" alt="Steak" style="width:100%">
-                <h3>Čokoládový Cheesecake s kúskami Oreo </h3>
-                <p>Čokoládový Cheesecake s kúskami Oreo je epitómom sladkého pôžitku. Už len pohľad na jeho dokonale hladký povrch,
-                    zdobený kúskami Oreo sušienok.</p>
-            </div>
-            <div class="quarter quarter-20">
-                <img src="img/katering/Ciastka%20z%20masłem%20orzechowym.jpg" alt="Cherries" style="width:100%">
-                <h3> Čokoládový Cookie </h3>
-                <p>Vitajte v svete čokoládových cookies, kde každý kúsok je zázrakom sladkého umenia a každý kútik rozkoše. </p>
-            </div>
-            <div class="quarter quarter-20">
-                <img src="img/katering/30%20Last-Minute%20Easter%20Recipes%20(Made%20in%2030%20Minutes%20or%20Less).jpg" alt="Pasta and Wine" style="width:100%">
-                <h3>Ovocný Pohár s mrveničkou</h3>
-                <p>Vstúpte do sveta ovocného pohára s mrveničkou, kde sa každý kútik skrytého kúsku stáva portálom
-                    do rozprávkového záhradného raja.</p>
-            </div>
-            <div class="quarter quarter-20">
-                <img src="img/katering/Prosty%20deser%20jogurtowo-truskawkowy.jpg" alt="Pasta and Wine" style="width:100%">
-                <h3>Jogurtovo-jahodový Dezert</h3>
-                <p>Jogurtovo-jahodový dezert nie je len skladbou ingrediencií, ale pohladenie pre vaše zmysly, cestou do
-                    sveta sladkej harmónie a osviežujúcej elegancie.</p>
-            </div>
-        </div>
-
-        <h5 class="center padding-32"><span class="tag wide">PRÍPITOK</span></h5>
-
-        <!-- Forth Photo Grid-->
-        <div class="row-padding padding-16 center" id="food">
-            <div class="quarter quarter-20">
-                <img src="img/katering/Getting%20Savvy%20With%20Nederburg%20Sauvignon.jpg" alt="Sandwich" style="width:100%">
-                <h3>Savy Nederburg Sauvignon</h3>
-            </div>
-            <div class="quarter quarter-20">
-                <img src="img/katering/Pin%20page.jpg" alt="Steak" style="width:100%">
-                <h3>Domaine de Pontrfact</h3>
-            </div>
-            <div class="quarter quarter-20">
-                <img src="img/katering/The%20perfect%20bubble%20for%20a%20romantic%20rendezvous%20-%20DrinksFeed.jpg" alt="Cherries" style="width:100%">
-                <h3>Graham Back</h3>
-            </div>
-            <div class="quarter quarter-20">
-                <img src="img/katering/Valdo%20Prosecco.jpg" alt="Pasta and Wine" style="width:100%">
-                <h3>Valdo Prosecco</h3>
-            </div>
-            <div class="quarter quarter-20">
-                <img src="img/katering/great%20french%20white%20wine%20from%20alsace.jpg" alt="Pasta and Wine" style="width:100%">
-                <h3>French white wine</h3>
+            <div class="col m3">
+                <a href="#" class="button block black">FORMULÁR</a>
             </div>
         </div>
     </div>
 
+    <!-- About Container -->
+    <div class="container" id="about">
+        <div class="content" style="max-width:700px">
+            <h5 class="center padding-64"><span class="tag wide">ABOUT</span></h5>
+            <p>
+            <h1><b>Soiree Specialist</b></h1> je vaším spoľahlivým partnerom pri organizovaní firemných večierkov, ktoré rozpália váš zmysel pre
+            zábavu a potešia vaše zamestnancov."
+            </p>
+
+            <p>
+                Ponúkame širokú škálu služieb vrátane profesionálneho fotografovania a videografie, DJ a zvukovej techniky,
+                cateringových služieb, dekorácií a osvetlenia a mnoho ďalších. Nechajte naše skúsené tímy vytvoriť atmosféru,
+                ktorá posilní puto medzi vašimi kolegami a poskytne nezabudnuteľné zážitky.
+            </p>
+
+            <div class="panel leftbar light-grey">
+                <p><i>
+                    S Naším tímom môžete mať istotu, že vaše firemné večierky budú plné radosti,
+                    energie a profesionality. Sme tu, aby sme vám pomohli vytvoriť udalosť, ktorá prekvapí
+                    a poteší vašich zamestnancov a posilní spolupatričnosť v tíme.
+                </i></p>
+            </div>
+            <img src="img/index/img2.jpg" style="width:100%;max-width:1000px" class="margin-top">
+            <p><strong>Opening hours:</strong> everyday from 6am to 5pm.</p>
+            <p><b>
+                Neváhajte nás kontaktovať pre viac informácií alebo na zarezervovanie vašej nasledujúcej firemnej udalosti.
+                Spoločne vytvoríme večer, na ktorý sa vaši zamestnanci nezabudnuteľne budú spomínať!
+            </b></p>
+
+            <h5 class="center padding-24"><span class="tag wide">NÁŠ TÝM</span></h5>
+
+        </div>
+    </div>
+
+
+    <!-- Contact -->
+
+    <div class="row-padding padding-16 center" >
+        <div class="quarter quarter-20">
+            <img src="img/%20-2.jpg" alt="Sandwich" style="width:100%">
+            <h3>The Perfect Sandwich, A Real NYC Classic</h3>
+            <p>Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+        </div>
+        <div class="quarter quarter-20">
+            <img src="img/%20-2.jpg" alt="Steak" style="width:100%">
+            <h3>Let Me Tell You About This Steak</h3>
+            <p>Once again, some random text to lorem lorem lorem lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+        </div>
+        <div class="quarter quarter-20">
+            <img src="img/man.jpg" alt="Cherries" style="width:100%">
+            <h3>Cherries, interrupted</h3>
+            <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+            <p>What else?</p>
+        </div>
+        <div class="quarter quarter-20">
+            <img src="img/man.jpg" alt="Pasta and Wine" style="width:100%">
+            <h3>Once Again, Robust Wine and Vegetable Pasta</h3>
+            <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+        </div>
+        <div class="quarter quarter-20">
+            <img src="img/man.jpg" alt="Pasta and Wine" style="width:100%">
+            <h3>Once Again, Robust Wine and Vegetable Pasta</h3>
+            <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+        </div>
+    </div>
 
     <!-- End page content -->
+
 </div>
 
 <!-- Footer -->
@@ -247,5 +178,6 @@
     }
     document.getElementById("myLink").click();
 </script>
-</body>
-</html>
+
+
+</body></html>
