--- a/FIREMNÉ VEČIERKY/projekty-firemné.html
+++ b/FIREMNÉ VEČIERKY/projekty-firemné.html
@@ -14,7 +14,7 @@
         .bgimg {
             background-position: center;
             background-size: cover;
-            background-image: url("img/projekty/Evento Corporativo Solstic.jpg");
+            background-image: url("img/index-firemné/img2.jpg");
             min-height: 75%;
         }
 
@@ -31,16 +31,16 @@
 <div class="top">
     <div class="row padding black">
         <div class="col-top m3-top ">
-            <img src="img/logo/logo1.png" class="block button" style="width: 79px!important;">
+            <img src="../logo/logo1.png" class="block button" style="width: 79px!important;">
         </div>
         <div class="col m3 ">
-            <a href="#" class="button block black">STUŽKOVÉ</a>
+            <a href="../STUŽKOVÁ/hlavna-stuzkove.html" class="button block black">STUŽKOVÉ</a>
         </div>
         <div class="col m3">
-            <a href="#" class="button block black">SVADBA</a>
+            <a href="../SVADBA/hlavna-svadba.html" class="button block black">SVADBA</a>
         </div>
         <div class="col m3">
-            <a href="#" class="button block black">FIREMNÉ VEČIERKY</a>
+            <a href="hlavná-firemná.html" class="button block black">FIREMNÉ VEČIERKY</a>
         </div>
         <div class="col m3">
             <a href="#" class="button block black">OSLAVY</a>
@@ -73,13 +73,13 @@
                 <a href="../../Documents/GitHub/webov-technologie-skupina-1/FIREMNÉ%20VEČIERKY/index.html" class="button block black">ABOUT</a>
             </div>
             <div class="col m3">
-                <a href="katering.html" class="button block black">KATERING</a>
+                <a href="Katering-firemné.html" class="button block black">KATERING</a>
             </div>
             <div class="col m3">
-                <a href="" class="button block black">PROJEKTY</a>
+                <a href="projekty-firemné.html" class="button block black">PROJEKTY</a>
             </div>
             <div class="col m3">
-                <a href="služby%20.html" class="button block black">SLUZBY</a>
+                <a href="služby-firemné.html" class="button block black">SLUZBY</a>
             </div>
         </div>
     </div>
