--- a/FIREMNÉ VEČIERKY/služby-firemné.html
+++ b/FIREMNÉ VEČIERKY/služby-firemné.html
@@ -116,7 +116,7 @@
                 <h2>Ethan Frost</h2>
 
                 <div class="quarter quarter-20">
-                    <img src="img/služby%20/dj.jpg" alt="Sandwich" style="width: 200px !important;">
+                    <img src="img/služby-firemné/dj.jpg" alt="Sandwich" style="width: 200px !important;">
                 </div>
 
                 <h3><b>
@@ -183,7 +183,7 @@
                 <h2>Isaac Brooks</h2>
 
                 <div class="quarter-20 quarter">
-                    <img src="img/služby%20/Introducing%20the%20Cameraman%20Pant.jpg" alt="Sandwich" style="width: 200px !important;">
+                    <img src="img/služby-firemné/Introducing%20the%20Cameraman%20Pant.jpg" alt="Sandwich" style="width: 200px !important;">
                 </div>
 
                 <h3><b>
@@ -243,7 +243,7 @@
                 <h2>Oliver Stone</h2>
 
                 <div class="quarter-20 quarter">
-                    <img src="img/služby%20/Adam%20Franzino%20Photography%20Archives%20@%20AOC%20—%20Anne%20of%20Carversville.jpg" alt="Sandwich" style="width: 200px !important;">
+                    <img src="img/služby-firemné/Adam%20Franzino%20Photography%20Archives%20@%20AOC%20—%20Anne%20of%20Carversville.jpg" alt="Sandwich" style="width: 200px !important;">
                 </div>
 
                 <h3><b>
@@ -304,7 +304,7 @@
 
 
                 <div class="quarter quarter-20">
-                    <img src="img/služby%20/Tamada%20Kosten%20-%20auf%20Russisch%20für%20Ihre%20russische%20Hochzeit.jpg" alt="Sandwich" style="width: 200px !important;">
+                    <img src="img/služby-firemné/Tamada%20Kosten%20-%20auf%20Russisch%20für%20Ihre%20russische%20Hochzeit.jpg" alt="Sandwich" style="width: 200px !important;">
                 </div>
 
                 <h3><b>
