--- a/FIREMNÉ VEČIERKY/projekty-firemné.html
+++ b/FIREMNÉ VEČIERKY/projekty-firemné.html
@@ -89,31 +89,31 @@
         <h5 STYLE="text-align: center" class="center padding-24"><span class="tag wide">ČO SME PRE ĽUDÍ PRIPRAVILI</span></h5>
         <div class="row-padding" style="margin-top:64px">
             <div class="col l3 m6">
-                <img src="img/projekty/Breakthrough%20Prize%20Awards%202019.jpg" style="width:100%" onclick="onClick(this)" class="hover-opacity" alt="A microphone">
+                <img src="img/projekty-firemné/Breakthrough%20Prize%20Awards%202019.jpg" style="width:100%" onclick="onClick(this)" class="hover-opacity" alt="A microphone">
             </div>
             <div class="col l3 m6">
-                <img src="img/projekty/Evento%20Corporativo%20Solstic.jpg" style="width:100%" onclick="onClick(this)" class="hover-opacity" alt="A phone">
+                <img src="img/projekty-firemné/Evento%20Corporativo%20Solstic.jpg" style="width:100%" onclick="onClick(this)" class="hover-opacity" alt="A phone">
             </div>
             <div class="col l3 m6">
-                <img src="img/projekty/Mitzvah.jpg" style="width:100%" onclick="onClick(this)" class="hover-opacity" alt="A drone">
+                <img src="img/projekty-firemné/Mitzvah.jpg" style="width:100%" onclick="onClick(this)" class="hover-opacity" alt="A drone">
             </div>
             <div class="col l3 m6">
-                <img src="img/projekty/projekt-4.jpg" style="width:100%" onclick="onClick(this)" class="hover-opacity" alt="Soundbox">
+                <img src="img/projekty-firemné/projekt-4.jpg" style="width:100%" onclick="onClick(this)" class="hover-opacity" alt="Soundbox">
             </div>
         </div>
 
         <div class="row-padding" style="margin-top:64px">
             <div class="col l3 m6">
-                <img src="img/projekty/projekt-1.jpg" style="width:100%" onclick="onClick(this)" class="hover-opacity" alt="A microphone">
+                <img src="img/projekty-firemné/projekt-1.jpg" style="width:100%" onclick="onClick(this)" class="hover-opacity" alt="projekt 1">
             </div>
             <div class="col l3 m6">
-                <img src="img/projekty/projekt-3.jpg" style="width:100%" onclick="onClick(this)" class="hover-opacity" alt="A phone">
+                <img src="img/projekty-firemné/projekt-3.jpg" style="width:100%" onclick="onClick(this)" class="hover-opacity" alt="projekt 1">
             </div>
             <div class="col l3 m6">
-                <img src="img/projekty/Rustic%20Sparkle%20Christmas_Holiday%20Party%20Ideas%20%7C%20Photo%201%20of%2011.jpg" style="width:100%" onclick="onClick(this)" class="hover-opacity" alt="A drone">
+                <img src="img/projekty-firemné/Rustic%20Sparkle%20Christmas_Holiday%20Party%20Ideas%20%7C%20Photo%201%20of%2011.jpg" style="width:100%" onclick="onClick(this)" class="hover-opacity" alt="projekt 1">
             </div>
             <div class="col l3 m6">
-                <img src="img/projekty/STUA%20GAS%20CHAIR.jpg" style="width:100%" onclick="onClick(this)" class="hover-opacity" alt="Soundbox">
+                <img src="img/projekty-firemné/STUA%20GAS%20CHAIR.jpg" style="width:100%" onclick="onClick(this)" class="hover-opacity" alt="projekt 1">
             </div>
         </div>
     </div>
