--- a/FIREMNÉ VEČIERKY/hlavná-firemná.html
+++ b/FIREMNÉ VEČIERKY/hlavná-firemná.html
@@ -157,8 +157,16 @@
 </div>
 
 <!-- Footer -->
-<footer class="center light-grey padding-48 large">
-    <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="hover-text-green">w3.css</a></p>
+<footer class="container padding-64 light-grey center opacity xlarge" style="margin-top:128px">
+    <p style=" text-align: center">&copy; 2024 Soiree Specialist. All rights reserved.</p>
+
+    <nav>
+        <ul>
+            <li><a href="../../Documents/GitHub/webov-technologie-skupina-1/FIREMNÉ%20VEČIERKY/index.html">Náš tým</a></li>
+            <li><a href="/contact">Contact Us</a></li>
+            <li><a href="/privacy-policy">Privacy Policy</a></li>
+        </ul>
+    </nav>
 </footer>
 
 <script>
