--- a/FIREMNÉ VEČIERKY/služby-firemné.html
+++ b/FIREMNÉ VEČIERKY/služby-firemné.html
@@ -367,6 +367,17 @@
 
     </div>
 
+    <footer class="container padding-64 light-grey center opacity xlarge" style="margin-top:128px">
+        <p style=" text-align: center">&copy; 2024 Soiree Specialist. All rights reserved.</p>
+
+        <nav>
+            <ul>
+                <li><a href="../../Documents/GitHub/webov-technologie-skupina-1/FIREMNÉ%20VEČIERKY/index.html">Náš tým</a></li>
+                <li><a href="/contact">Contact Us</a></li>
+                <li><a href="/privacy-policy">Privacy Policy</a></li>
+            </ul>
+        </nav>
+    </footer>
 
     <script>
 
