footer a zmeny vo firemnom

--- a/FIREMNÉ VEČIERKY/projekty-firemné.html
+++ b/FIREMNÉ VEČIERKY/projekty-firemné.html
@@ -70,7 +70,7 @@
     <div class="top">
         <div class="row padding black">
             <div class="col m3 ">
-                <a href="../../Documents/GitHub/webov-technologie-skupina-1/FIREMNÉ%20VEČIERKY/index.html" class="button block black">ABOUT</a>
+                <a href="hlavná-firemná.html" class="button block black">ABOUT</a>
             </div>
             <div class="col m3">
                 <a href="Katering-firemné.html" class="button block black">KATERING</a>
@@ -127,7 +127,7 @@
 
     <nav>
         <ul>
-            <li><a href="../../Documents/GitHub/webov-technologie-skupina-1/FIREMNÉ%20VEČIERKY/index.html">Náš tým</a></li>
+            <li><a href="hlavná-firemná.html">Náš tým</a></li>
             <li><a href="/contact">Contact Us</a></li>
             <li><a href="/privacy-policy">Privacy Policy</a></li>
         </ul>
