--- a/hlavná stránka.html
+++ b/hlavná stránka.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html><head>
-    <title>FIREMNÉ večierky</title>
+    <title>hlavná stránka</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="FIREMNÉ%20VEČIERKY/style.css">
     <style>
         body, html {
             height: 100%;
@@ -13,7 +13,7 @@
         .bgimg {
             background-position: center;
             background-size: cover;
-            background-image: url("img/index-firemné/img1.jpg");
+            background-image: url("FIREMNÉ VEČIERKY/img/index-firemné/img3.jpg");
             min-height: 75%;
         }
 
@@ -33,13 +33,13 @@
             <img src="img/logo/logo1.png" class="block button" style="width: 79px!important;">
         </div>
         <div class="col m3 ">
-            <a href="../STUŽKOVÁ/hlavna-stuzkove.html" class="button block black">STUŽKOVÉ</a>
+            <a href="#" class="button block black">STUŽKOVÉ</a>
         </div>
         <div class="col m3">
-            <a href="../SVADBA/hlavna-svadba.html" class="button block black">SVADBA</a>
+            <a href="#" class="button block black">SVADBA</a>
         </div>
         <div class="col m3">
-            <a href="hlavná-firemná.html" class="button block black">FIREMNÉ VEČIERKY</a>
+            <a href="#" class="button block black">FIREMNÉ VEČIERKY</a>
         </div>
         <div class="col m3">
             <a href="#" class="button block black">OSLAVY</a>
@@ -56,7 +56,7 @@
         <span class="tag">Open from 6am to 5pm</span>
     </div>
     <div class="display-middle center">
-        <span class="text-white" style="font-size:90px">Firemné<br>večierky</span>
+        <span class="text-white" style="font-size:90px">SOIREE<br>SPECIALIST</span>
     </div>
     <div class="display-bottomright center padding-large">
         <span class="text-white">15 Adr street, 5015</span>
@@ -66,22 +66,6 @@
 <!-- Add a background color and large text to the whole page -->
 <div class="sand grayscale large">
 
-    <div class="top">
-        <div class="row padding black">
-            <div class="col m3 ">
-                <a href="hlavná-firemná.html" class="button block black">ABOUT</a>
-            </div>
-            <div class="col m3">
-                <a href="Katering-firemné.html" class="button block black">KATERING</a>
-            </div>
-            <div class="col m3">
-                <a href="projekty-firemné.html" class="button block black">PROJEKTY</a>
-            </div>
-            <div class="col m3">
-                <a href="služby-firemné.html" class="button block black">SLUZBY</a>
-            </div>
-        </div>
-    </div>
 
     <!-- About Container -->
     <div class="container" id="about">
@@ -154,16 +138,8 @@
 </div>
 
 <!-- Footer -->
-<footer class="container padding-64 light-grey center opacity xlarge" style="margin-top:128px">
-    <p style=" text-align: center">&copy; 2024 Soiree Specialist. All rights reserved.</p>
-
-    <nav>
-        <ul>
-            <li><a href="hlavná-firemná.html">Náš tým</a></li>
-            <li><a href="/contact">Contact Us</a></li>
-            <li><a href="/privacy-policy">Privacy Policy</a></li>
-        </ul>
-    </nav>
+<footer class="center light-grey padding-48 large">
+    <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="hover-text-green">w3.css</a></p>
 </footer>
 
 <script>
