--- a/FIREMNÉ VEČIERKY/hlavná-firemná.html
+++ b/FIREMNÉ VEČIERKY/hlavná-firemná.html
@@ -105,7 +105,7 @@
                     a poteší vašich zamestnancov a posilní spolupatričnosť v tíme.
                 </i></p>
             </div>
-            <img src="img/index/img2.jpg" style="width:100%;max-width:1000px" class="margin-top">
+            <img src="img/index-firemné/img2.jpg" style="width:100%;max-width:1000px" class="margin-top">
             <p><strong>Opening hours:</strong> everyday from 6am to 5pm.</p>
             <p><b>
                 Neváhajte nás kontaktovať pre viac informácií alebo na zarezervovanie vašej nasledujúcej firemnej udalosti.
