--- a/FIREMNÉ VEČIERKY/hlavná-firemná.html
+++ b/FIREMNÉ VEČIERKY/hlavná-firemná.html
@@ -123,7 +123,7 @@
     <div class="row-padding padding-16 center" >
         <div class="quarter quarter-20">
             <img src="img/%20-2.jpg" alt="Sandwich" style="width:100%">
-            <h3>The Perfect Sandwich, A Real NYC Classic</h3>
+            <h3>KIKO</h3>
             <p>Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p>
         </div>
         <div class="quarter quarter-20">
