--- a/FIREMNÉ VEČIERKY/hlavná-firemná.html
+++ b/FIREMNÉ VEČIERKY/hlavná-firemná.html
@@ -128,23 +128,23 @@
         </div>
         <div class="quarter quarter-20">
             <img src="img/%20-2.jpg" alt="Steak" style="width:100%">
-            <h3>Let Me Tell You About This Steak</h3>
+            <h3>NATY</h3>
             <p>Once again, some random text to lorem lorem lorem lorem ipsum text praesent tincidunt ipsum lipsum.</p>
         </div>
         <div class="quarter quarter-20">
             <img src="img/man.jpg" alt="Cherries" style="width:100%">
-            <h3>Cherries, interrupted</h3>
+            <h3>NIKI</h3>
             <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
             <p>What else?</p>
         </div>
         <div class="quarter quarter-20">
             <img src="img/man.jpg" alt="Pasta and Wine" style="width:100%">
-            <h3>Once Again, Robust Wine and Vegetable Pasta</h3>
+            <h3>DORY</h3>
             <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
         </div>
         <div class="quarter quarter-20">
             <img src="img/man.jpg" alt="Pasta and Wine" style="width:100%">
-            <h3>Once Again, Robust Wine and Vegetable Pasta</h3>
+            <h3>DIDY</h3>
             <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
         </div>
     </div>
