--- a/FIREMNÉ VEČIERKY/hlavná-firemná.html
+++ b/FIREMNÉ VEČIERKY/hlavná-firemná.html
@@ -122,28 +122,28 @@
 
     <div class="row-padding padding-16 center" >
         <div class="quarter quarter-20">
-            <img src="img/%20-2.jpg" alt="Sandwich" style="width:100%">
+            <img src="img/%20-2.jpg" alt="Photo" style="width:100%">
             <h3>KIKO</h3>
             <p>Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p>
         </div>
         <div class="quarter quarter-20">
-            <img src="img/%20-2.jpg" alt="Steak" style="width:100%">
+            <img src="img/%20-2.jpg" alt="photo" style="width:100%">
             <h3>NATY</h3>
             <p>Once again, some random text to lorem lorem lorem lorem ipsum text praesent tincidunt ipsum lipsum.</p>
         </div>
         <div class="quarter quarter-20">
-            <img src="img/man.jpg" alt="Cherries" style="width:100%">
+            <img src="img/man.jpg" alt="photo" style="width:100%">
             <h3>NIKI</h3>
             <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
             <p>What else?</p>
         </div>
         <div class="quarter quarter-20">
-            <img src="img/man.jpg" alt="Pasta and Wine" style="width:100%">
+            <img src="img/man.jpg" alt="photo" style="width:100%">
             <h3>DORY</h3>
             <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
         </div>
         <div class="quarter quarter-20">
-            <img src="img/man.jpg" alt="Pasta and Wine" style="width:100%">
+            <img src="img/man.jpg" alt="photo" style="width:100%">
             <h3>DIDY</h3>
             <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
         </div>
