--- a/hlavná stránka.html
+++ b/hlavná stránka.html
@@ -33,13 +33,13 @@
             <img src="img/logo/logo1.png" class="block button" style="width: 79px!important;">
         </div>
         <div class="col m3 ">
-            <a href="#" class="button block black">STUŽKOVÉ</a>
+            <a href="STUŽKOVÁ/hlavna-stuzkove.html" class="button block black">STUŽKOVÉ</a>
         </div>
         <div class="col m3">
-            <a href="#" class="button block black">SVADBA</a>
+            <a href="SVADBA/hlavna-svadba.html" class="button block black">SVADBA</a>
         </div>
         <div class="col m3">
-            <a href="#" class="button block black">FIREMNÉ VEČIERKY</a>
+            <a href="FIREMNÉ%20VEČIERKY/hlavná-firemná.html" class="button block black">FIREMNÉ VEČIERKY</a>
         </div>
         <div class="col m3">
             <a href="#" class="button block black">OSLAVY</a>
@@ -106,29 +106,29 @@
 
     <div class="row-padding padding-16 center" >
         <div class="quarter quarter-20">
-            <img src="img/%20-2.jpg" alt="Sandwich" style="width:100%">
-            <h3>The Perfect Sandwich, A Real NYC Classic</h3>
+            <img src="img/%20-2.jpg" alt="Photo" style="width:100%">
+            <h3>KIKO</h3>
             <p>Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p>
         </div>
         <div class="quarter quarter-20">
-            <img src="img/%20-2.jpg" alt="Steak" style="width:100%">
-            <h3>Let Me Tell You About This Steak</h3>
+            <img src="img/%20-2.jpg" alt="photo" style="width:100%">
+            <h3>NATY</h3>
             <p>Once again, some random text to lorem lorem lorem lorem ipsum text praesent tincidunt ipsum lipsum.</p>
         </div>
         <div class="quarter quarter-20">
-            <img src="img/man.jpg" alt="Cherries" style="width:100%">
-            <h3>Cherries, interrupted</h3>
+            <img src="img/man.jpg" alt="photo" style="width:100%">
+            <h3>NIKI</h3>
             <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
             <p>What else?</p>
         </div>
         <div class="quarter quarter-20">
-            <img src="img/man.jpg" alt="Pasta and Wine" style="width:100%">
-            <h3>Once Again, Robust Wine and Vegetable Pasta</h3>
+            <img src="img/man.jpg" alt="photo" style="width:100%">
+            <h3>DORY</h3>
             <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
         </div>
         <div class="quarter quarter-20">
-            <img src="img/man.jpg" alt="Pasta and Wine" style="width:100%">
-            <h3>Once Again, Robust Wine and Vegetable Pasta</h3>
+            <img src="img/man.jpg" alt="photo" style="width:100%">
+            <h3>DIDY</h3>
             <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
         </div>
     </div>
@@ -138,8 +138,16 @@
 </div>
 
 <!-- Footer -->
-<footer class="center light-grey padding-48 large">
-    <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="hover-text-green">w3.css</a></p>
+<footer class="container padding-64 light-grey center opacity xlarge" style="margin-top:128px">
+    <p style=" text-align: center">&copy; 2024 Soiree Specialist. All rights reserved.</p>
+
+    <nav>
+        <ul>
+            <li><a href="hlavná%20stránka.html">Náš tým</a></li>
+            <li><a href="/contact">Contact Us</a></li>
+            <li><a href="/privacy-policy">Privacy Policy</a></li>
+        </ul>
+    </nav>
 </footer>
 
 <script>
