--- a/SVADBA/obleky-svadba.html
+++ b/SVADBA/obleky-svadba.html
@@ -15,7 +15,7 @@
              style="width: 40px !important;
                   height: 50px !important;">
     
-    <ul class="nav">
+    <ul class="nav">;
         <li class="nav-item">
             <a class="active" href="#">Weddings</a>
         </li>
