--- a/SVADBA/galeria-svadba.html
+++ b/SVADBA/galeria-svadba.html
@@ -9,7 +9,7 @@
 </head>
 <points>
     <header class="header">
-        <img class="logo" src="../WEB FINAL/obrázky/hlavna/galeria/logo1.jpg" alt="Apple Logo"
+        <img class="logo" src="img-svadba/svadby-img1/svadby-obrazky1/hlavna/galeria/logo1.jpg" alt="Apple Logo"
              style="width: 40px !important;
                   height: 50px !important;">
 
