--- a/SVADBA/formular-svadba.html
+++ b/SVADBA/formular-svadba.html
@@ -11,7 +11,7 @@
 
 <body>
   <header class="header">
-    <img class="logo" src="../WEB FINAL/obrázky/hlavna/galeria/logo1.jpg" alt="Apple Logo"
+    <img class="logo" src="img-svadba/svadby-img1/svadby-obrazky1/hlavna/galeria/logo1.jpg" alt="Apple Logo"
          style="width: 40px !important;
               height: 50px !important;">
 
